# INF2004-T1

./: README.md
Partial_Integration/: CMakeLists.txt  Partial_Integration.c
driver/: motor
driver/encoder/: CMakeLists.txt  encoder.c
driver/irsensor/: irline.c
driver/magnetometer/: magnetometer.c  magnometer2_print.c
driver/magnometer/: CMakeLists.txt  magnometer.c
driver/motor/: CMakeLists.txt  motor_control.c
driver/ultrasonic/: CMakeLists.txt  ultrasonic.c
driver/wifi/: CMakeLists.txt  cmake_install.cmake  wifi.c  wifi.dis  wifi.elf  wifi.hex  wifi.uf2
embedproj/: CMakeLists.txt  irline.c
